# diffscope-synthesis-platform

./: .gitignore  AGENTS.md  CMakeLists.txt  go.mod  go.sum
cmd/dssp/: main.go
docs/open-api/: openapi.json
internal/api/: architecture.go  errors.go  singer.go  types.go
internal/architecture/: architecture.go  registry.go
internal/cli/: cli.go  logger.go  print_devices.go
internal/cli/commands/: list_devices.go  serve.go
internal/diffsinger/: architecture.go  audio.go  config.go  duration.go  envtag.go  parameter.go  phoneme.go  pronunciation.go  singer.go
internal/dsinfer/: acousticinference.go  audioencoder.go  data.go  durationinference.go  pitchinference.go  varianceinference.go  vocoderinference.go
internal/dsinfer/builder/: parameters.go  speakers.go  words.go
internal/executionprovider/: executionprovider.go
internal/languageconversion/: languageconversion.go
internal/phonemeconversion/: phonemeconversion.go
internal/server/: application_info.go  architectures.go  audio.go  duration.go  parameter.go  phoneme.go  pronunciation.go  request.go  server.go  singer.go
internal/synthrt/: synthrt.go
internal/utils/: language.go  resourcemanager.go  serializedtaskqueue.go
native/: CMakeLists.txt  callbackregister.go  logger.go
native/include/: native.h
native/src/: dsinferacoustic.cpp  dsinferaudioencoder.cpp  dsinferdata.cpp  dsinferdata.h  dsinferduration.cpp  dsinferinferencehelper.h  dsinferpitch.cpp  dsinfervariance.cpp  dsinfervocoder.cpp  execution_provider_info.cpp  executionprovider.cpp  language_conversion.cpp  languageconversion.cpp  logger.cpp  logger.h  luarunnerpool.h  nativefileutils.h  onsetmarker.cpp  s2p.cpp  synthrt.cpp  synthrt.h  types.cpp  types.h
native/swig/: native.i
scripts/vcpkg-manifest/: vcpkg.json
